Amélioration de la sémantique des pages menus, priorité des titres h4 deveint h3 et h3 devient h2

--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -25,6 +25,9 @@ header a {
     font-size: 1.5em;
     font-weight: lighter;
     letter-spacing: 1px;
+    & .titre {
+        font-size: 2em;
+    }
     @media screen and (max-width: 1199px) {
        width: 90%;
        display: flex;
@@ -174,7 +177,7 @@ img {
     @media screen and (max-width: 768px) {
         padding-bottom: 5px;
     }
-    & h3 {
+    & h2 {
     font-size: 1.8em;
     font-family: $font-note;
     color: $color-menu1-1;
@@ -215,7 +218,7 @@ img {
     @media screen and (max-width: 768px){
         font-size: 0.6em;
     }
-    & h3 {
+    & h2 {
         padding-left: 20px;
         font-family: $font-note;
         font-size: 2em;
