--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,9 @@ header a:visited {
   font-weight: lighter;
   letter-spacing: 1px;
 }
+.menu-1 .titre {
+  font-size: 2em;
+}
 @media screen and (max-width: 1199px) {
   .menu-1 {
     width: 90%;
@@ -367,7 +370,7 @@ header a:visited {
     padding-bottom: 5px;
   }
 }
-.section__header h3 {
+.section__header h2 {
   font-size: 1.8em;
   font-family: "Devonshire", cursive;
   color: #3d1319;
@@ -413,7 +416,7 @@ header a:visited {
     font-size: 0.6em;
   }
 }
-.section__footer h3 {
+.section__footer h2 {
   padding-left: 20px;
   font-family: "Devonshire", cursive;
   font-size: 2em;
@@ -663,7 +666,7 @@ header a:visited {
     padding: 30px;
   }
 }
-.section__header-4 h3 {
+.section__header-4 h2 {
   font-size: 3em;
   font-family: "KaushanScript", cursive;
   font-family: "KaushanScript", cursive;
@@ -672,7 +675,7 @@ header a:visited {
   color: transparent;
 }
 @media screen and (max-width: 768px) {
-  .section__header-4 h3 {
+  .section__header-4 h2 {
     font-size: 1.5em;
   }
 }
@@ -985,7 +988,7 @@ header a:visited {
     padding-bottom: 50px;
   }
 }
-.section__header-2 h3 {
+.section__header-2 h2 {
   font-size: 2.5em;
   font-family: "YesevaOne", serif;
   font-weight: lighter;
@@ -994,7 +997,7 @@ header a:visited {
   color: transparent;
 }
 @media screen and (max-width: 768px) {
-  .section__header-2 h3 {
+  .section__header-2 h2 {
     font-size: 1.5em;
   }
 }
@@ -1094,7 +1097,7 @@ header a:visited {
   transition: all 600ms ease-in-out;
 }
 
-h4:hover:before {
+h3:hover:before {
   visibility: visible;
   transform: scaleX(1);
 }
@@ -1232,7 +1235,7 @@ h4:hover:before {
     padding: 30px;
   }
 }
-.section__header-3 h3 {
+.section__header-3 h2 {
   font-size: 3em;
   font-family: "Dancing Script", cursive;
   font-weight: lighter;
@@ -1241,7 +1244,7 @@ h4:hover:before {
   color: transparent;
 }
 @media screen and (max-width: 768px) {
-  .section__header-3 h3 {
+  .section__header-3 h2 {
     font-size: 1.5em;
   }
 }
@@ -1259,6 +1262,7 @@ h4:hover:before {
 .block__meals-line-3 {
   display: flex;
   justify-content: space-between;
+  padding-left: 20px;
   padding-right: 50px;
   padding-top: 5px;
   padding-bottom: 10px;
@@ -1274,23 +1278,6 @@ h4:hover:before {
 }
 .block__meals-line-3 .price-3 {
   padding-left: 20px;
-}
-
-.section__footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
-}
-.section__footer h3 {
-  padding-left: 20px;
-  font-family: "Devonshire", cursive;
-  font-size: 2em;
-  font-weight: lighter;
-  color: #3d1319;
-}
-.section__footer img {
-  max-height: 60px;
 }
 
 header a {
@@ -1526,7 +1513,7 @@ main {
 }
 
 /*PROCHAINEMENT*/
-button {
+.prochainement {
   margin: auto;
   display: flex;
   justify-content: center;
@@ -1538,19 +1525,12 @@ button {
   color: #fcca53;
   font-family: "Montserrat", sans-serif;
   font-size: 2.5em;
-}
-@media screen and (max-width: 768px) {
-  button {
-    max-width: 300px;
-    font-size: 1.5em;
-  }
-}
-
-.prochainement {
   margin-bottom: 50px;
 }
 @media screen and (max-width: 768px) {
   .prochainement {
+    max-width: 300px;
+    font-size: 1.5em;
     margin-bottom: 200px;
   }
 }
