--- a/sass/pages/le_delice_des_papilles.scss
+++ b/sass/pages/le_delice_des_papilles.scss
@@ -11,6 +11,9 @@ header a {
     font-size: 2em;
     font-family: $font-maintitle;
     letter-spacing: 1px;
+    @media screen and (max-width: 768px) {
+        font-size: 1em;
+    }
 }
 
 .menu-3 {
@@ -32,7 +35,7 @@ header a {
         padding-top: 30px;
         padding-bottom: 30px;
        }
-}
+} 
 
 @mixin block-repeat-3 {
     display: flex;
